--- a/GooTM.html
+++ b/GooTM.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="utf-8">
 <title>GooTM</title>
-<script
-src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places">
+<script async defer type="text/javascript"
+src="https://maps.googleapis.com/maps/api/js?key= AIzaSyABO8DMcqs4sZOoM_h52sjjgC8aWfEpcI8">
 </script>
 <script src="LLUTM.js" type="text/javascript"></script>
 
