--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>GooTM</title>
 <script async defer type="text/javascript"
-src="https://maps.googleapis.com/maps/api/js?key= AIzaSyABO8DMcqs4sZOoM_h52sjjgC8aWfEpcI8">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABO8DMcqs4sZOoM_h52sjjgC8aWfEpcI8">
 </script>
 <script src="LLUTM.js" type="text/javascript"></script>
 
